# shimuguyue.love-new

./: .gitignore  LICENSE
client/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
client/src/: App.vue  main.ts
client/src/assets/: background.css  blog-layout.css  blog.css  glass.css  markdown.css  pink-theme.css
client/src/components/: NavBar.vue
client/src/composables/: useTheme.ts
client/src/css/: base.css  blog-detail.css  blog.css  login.css  markdown.css  navbar.css
client/src/router/: index.ts
client/src/stores/: auth.ts  theme.ts
client/src/types/: markdown-it-katex.d.ts  markdown-it-task-lists.d.ts
client/src/views/: About.vue  AboutPage.vue  AccountPage.vue  Acknowledgments.vue  BlogDetail.vue  BlogDetailPage.vue  BlogEdit.vue  BlogImportPage.vue  BlogPage.vue  Blogs.vue  Favorites.vue  FavoritesPage.vue  Home.vue  HomePage.vue  LoginByAccountPage.vue  LoginByKeyPage.vue  LoginKey.vue  LoginPage.vue  LoginPassword.vue  Profile.vue  Projects.vue  ProjectsPage.vue
server/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
server/src/: main.cpp
server/src/auth/: login.cpp  login.h  session.cpp  session.h
server/src/blog/: blog_queries.cpp  blog_queries.h
server/src/config/: config.h
server/src/crypto/: argon2id.cpp  argon2id.h  hasher.cpp  hasher.h
server/src/db/: connection.cpp  connection.h  connection_pool.cpp  connection_pool.h
server/src/http/: blog_import.cpp  blog_import.h  blog_query.cpp  blog_query.h  handlers.cpp  handlers.h  login_handler.cpp  login_handler.h  protocol.cpp  protocol.h  routes.cpp  routes.h  server.cpp  server.h
server/src/image/: image_queries.cpp  image_queries.h
server/src/md/: markdown_parser.cpp  markdown_parser.h
server/src/profile/: profile_queries.cpp  profile_queries.h
sql/: create_blogs.sql  create_images.sql  create_permissions.sql  create_profile.sql  create_sessions.sql  create_users.sql
